--- a/projects.html
+++ b/projects.html
@@ -45,6 +45,30 @@
                         </div>
 
             </div>
+
+
+            <div>
+                <img class="imagePop" src="images/projects/colorshot.png" onclick="openOnImageClick(this)">
+                            <div class="modal">
+                                <div class="modal-content">
+                                    <span class="close" onclick="closeWindow(this)">&times;</span>
+                                    <center>
+                                    <h1>Color Shot (Unity/C#):</h1>
+                                    <img src="images/projects/colorshot1.png" style="width:30%">
+                                    <img src="images/projects/colorshot2.png" style="width:30%">
+                                    <p> This is an android arcade game created on Unity from scratch during a 36 hour hackathon called HACKUCI. The goal of the game is to win as many points as possible without letting any enemies reach the other side. The enemies are different colors and the user can only destroy the enemy if he or she scrolls to the right color to be shot out at them. I created all the artwork and programmed parts of the project.  </p>
+                                    </center>
+                                </div>
+    
+                            </div>
+    
+                </div>
+
+
+
+
+
+
             <div>
                 <img class="imagePop" src="images/projects/fruitdrop.png" onclick="openOnImageClick(this)">
                             <div class="modal">
