--- a/aboutme.html
+++ b/aboutme.html
@@ -46,7 +46,7 @@
             </h1>
             </div>
            <div>
-            <img class= "pull-left animated fadeInLeft" id="picture" src="images/bw.jpg">
+            <img class= "pull-left animated fadeInLeft" id="picture" src="images/prof.jpg">
             </div>
             </div>
             </div>
