--- a/aboutme.html
+++ b/aboutme.html
@@ -31,7 +31,7 @@
             <div class= "pull-left animated fadeInLeft" id="description">
             <h1>
                     Hi there! My name is Michelle and I am currently a 
-                    junior studying computer science at University of 
+                    senior studying computer science at University of 
                     California, Irvine. I love programming and am 
                     excited to gain more knowledge in the field of
                     computer science. I am passionate about learning new things
