--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
                     <h2>626-200-7215</h2>
                     <h2>michelleymwoo@gmail.com</h2>
                     <a href="resume.pdf">Download resume</a>
+                    <p> All graphics created by Michelle Woo</p>
                    
                 </center>
             </div>
